@@ -35,7 +35,7 @@ public class UserVariable implements Serializable {
 	public UserVariable(String name, List<UserVariable> context) {
 		this.context = context;
 		this.name = name;
-		this.value = new Double(0.0);
+		this.value = Double.valueOf(0.0);
 	}
 
 	public Double getValue() {
